# openwec

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  analysis_inventory.csv  ispect_csv.py  requirements-api.txt  requirements-dev.txt  requirements.txt  sdk_openwec_test.ipynb  test_api.py
analytics/: engine.py
api/: config.py  deps.py  main.py  schemas.py
api/routers/: analytics.py  api_keys.py  drivers_teams.py  laps.py  results.py  series.py  sessions.py
collectors/alms/: alms_collect.py
collectors/elms/: elms_collect.py
collectors/imsa/: diagnose_imsa.py  imsa_collect.py  prefix.py
collectors/lemanscup/: lemanscup_collect.py
collectors/wec/: catalog_spider_v3.py  download_all.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: GapChart.jsx  LapEvolutionChart.jsx  Leaderboard.jsx  RaceControl.jsx  SiteFooter.jsx  (+2 more)
database/: db.py  schema.sql
database/admin/: manage_api_keys.py
database/enrichment/: enrich_wikidata.py  merge_drivers.py  needs_review.json  normalize_drivers.py  normalize_teams.py  wikidata_cache.json  wikidata_not_found.json
database/loader/: debug_race_session.py  load_classification.py  load_laps.py  load_metadata.py
database/migrations/: 001_fix_car_number.sql  002_laps_nullable_timestamp.sql  003_api_key_requests.sql  004_laps_unique_constraint.sql
docker/: docker-compose.yml
sdk/: README.md  pyproject.toml  setup.py
sdk/examples/: le_mans_2026.ipynb
sdk/openwec/: __init__.py  client.py  plotting.py  session.py
(+5 files in other folders)
