[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwec"
version = "0.1.0"
description = "Python SDK for endurance racing data — WEC, ELMS, ALMS, Le Mans Cup, IMSA"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

authors = [
    { name = "Paloma C."}
]

keywords = [
    "motorsport", "endurance racing", "WEC", "Le Mans",
    "ELMS", "IMSA", "timing data", "lap times", "pandas"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
dev = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "twine>=5.0",
    "build>=1.0",
]

[project.urls]
Homepage      = "https://openwec.com"
Documentation = "https://api.openwec.com/docs"
Repository    = "https://github.com/palomacdev/openwec"
"Bug Tracker" = "https://github.com/palomacdev/openwec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openwec*"]